# GaiaFramework

./: .gitignore  CMakeLists.txt  LICENSE  README.md
GaiaFramework/: CMakeLists.txt  GaiaFramework.hpp  GaiaFrameworkConfig.cmake  GaiaFrameworkConfig.hpp.in  Launcher.hpp  PackageConfig.cmake.in  Service.cpp  Service.hpp
GaiaFramework/Clients/: ConfigurationClient.cpp  ConfigurationClient.hpp  LogClient.cpp  LogClient.hpp  LogRecorder.cpp  LogRecorder.hpp  NameClient.cpp  NameClient.hpp
TestService/: CMakeLists.txt  Launcher.cpp
